// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie renders correctly 1`] = `
<div
  className="sc-bdVaJa ilUIgN"
>
  <a
    className="sc-dnqmqq kxhpGu"
    href="/"
    onClick={[Function]}
  >
    <Logo />
  </a>
  <figure
    className="sc-bwzfXH haFnbb"
  >
    <div
      className="sc-htpNat iMSUrM"
    >
      <img
        alt="Fifty Shades Freed"
        className="sc-htoDjs kKCJWi"
        src="https://image.tmdb.org/t/p/w500/3kcEGnYBHDeqmdYf8ZRbKdfmlUy.jpg"
      />
    </div>
    <figcaption
      className="sc-bxivhb dRhjdJ"
    >
      <div
        className="sc-ifAKCX dCoIjQ"
      >
        <h2
          className="sc-EHOje ixikkM"
        >
          Fifty Shades Freed
        </h2>
        <span
          className="sc-bZQynM jCBbRc"
        >
          6.1
        </span>
      </div>
      <h4>
        Don't miss the climax
      </h4>
      <span
        className="sc-gzVnrw igxgss"
      >
        2018
      </span>
      <span>
        106
         min
      </span>
      <p>
        Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins.
      </p>
    </figcaption>
  </figure>
</div>
`;

exports[`Movie renders correctly with invalid date 1`] = `
<div
  className="sc-bdVaJa ilUIgN"
>
  <a
    className="sc-dnqmqq kxhpGu"
    href="/"
    onClick={[Function]}
  >
    <Logo />
  </a>
  <figure
    className="sc-bwzfXH haFnbb"
  >
    <div
      className="sc-htpNat iMSUrM"
    >
      <img
        alt="Fifty Shades Freed"
        className="sc-htoDjs kKCJWi"
        src="https://image.tmdb.org/t/p/w500/3kcEGnYBHDeqmdYf8ZRbKdfmlUy.jpg"
      />
    </div>
    <figcaption
      className="sc-bxivhb dRhjdJ"
    >
      <div
        className="sc-ifAKCX dCoIjQ"
      >
        <h2
          className="sc-EHOje ixikkM"
        >
          Fifty Shades Freed
        </h2>
        <span
          className="sc-bZQynM jCBbRc"
        >
          6.1
        </span>
      </div>
      <h4>
        Don't miss the climax
      </h4>
      <span
        className="sc-gzVnrw igxgss"
      >
        
      </span>
      <span>
        106
         min
      </span>
      <p>
        Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins.
      </p>
    </figcaption>
  </figure>
</div>
`;
